# research-synstation

./: .gitignore  README.md  pyproject.toml  route_in_multiple_markets.py
misc/: find_optimal_fee_rate.py  get_L.py  get_amms_initializations.py  get_psm_reserve.py  psm_ir_simulation.py  route_in_gm.py  route_in_outcome.py
src/: Counter.vy  PMAMM.vy  Router.vy  router.sol
