[tool.poetry]
name = "research-synstation"
version = "0.1.0"
description = ""
authors = ["kosunghun317 <kosunghun317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tabulate = "^0.9.0"
moccasin = "^0.3.6"
web3 = "^7.6.1"
pandas = "^2.2.3"
ruff = "^0.8.6"
scipy = "^1.15.0"
numpy = "^2.2.1"
snekmate = "^0.1.0"
matplotlib = "^3.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
